# Sorting-Hat

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
infra/langfuse/: .env.example  Makefile
scripts/: build_training_data.py  csv_to_sessions.py  eval_comparison_viewer.py  eval_intent.py  label_sessions.py  label_turns.py  langfuse_viewer.py  predict_day.py  predict_embedding.py  pull_langfuse_sessions.py  pull_sessions.py  pull_turns.py  rebalance_training.py  results_dashboard.py  sanity_train_memo.py  session_chat_viewer.py  train_embedding_classifier.py  train_qwen_lora.py
src/sorting_hat/labeling/: __init__.py  labeler.py  prompts.py  schema.py
tests/: test_smoke.py
